# ai-skills-curated

./: LICENSE  README.md
agents/skills/gcp-agent-bootstrap/: SKILL.md
agents/skills/llm-wiki-kb/: README.md  SKILL.md
agents/skills/llm-wiki-kb/assets/knowledge-base/: copilot-instructions.md
agents/skills/llm-wiki-kb/assets/knowledge-base/.github/workflows/: base-md-sync.yml
agents/skills/llm-wiki-kb/assets/knowledge-base/commands/: fix-home.md  snapshots-sync.md  tabs-sync.md  wiki-lint.md
agents/skills/llm-wiki-kb/assets/knowledge-base/scripts/: base_md_sync.py  chrome_tabs_fetcher.py  fix_home_md.py  ipynb-to-md.py  snapshots_sync.py  wiki-ingest.py
agents/skills/llm-wiki-nocode/: README.md  SKILL.md
agents/skills/llm-wiki-nocode/assets/dkt-bookmarks/: Makefile  copilot-instructions.md
agents/skills/llm-wiki-nocode/assets/dkt-bookmarks/commands/: tabs-sync.md  wiki-ingest.md  wiki-lint.md  wiki-query.md
agents/skills/llm-wiki-nocode/assets/dkt-bookmarks/scripts/: chrome_tabs_sync.py
agents/skills/llm-wiki-nocode/assets/knowledge-base/: Makefile  copilot-instructions.md
agents/skills/llm-wiki-nocode/assets/knowledge-base/.github/actions/install-project/: action.yml
agents/skills/llm-wiki-nocode/assets/knowledge-base/.github/workflows/: base-md-sync.yml
agents/skills/llm-wiki-nocode/assets/knowledge-base/commands/: base-md-sync.md  convert.md  fix-home.md  rename.md  snapshots-sync.md  tabs-sync.md  wiki-lint.md
agents/skills/llm-wiki-nocode/assets/knowledge-base/scripts/: base_md_sync.py  chrome_tabs_sync.py  fix_home_md.py  ipynb-to-md.py  rename_md.py  snapshots_sync.py  wiki-ingest.py
agents/skills/managing-python-projects-with-uv/: SKILL.md
agents/skills/managing-python-projects-with-uv/assets/: .gitignore  Makefile  README.md  ci.yml  main.py  publish.yml  test_main.py
agents/skills/managing-python-projects-with-uv/references/: Makefile  pyproject.toml
apm/skills/: README.md
apm/skills/managing-python-projects-with-uv/: apm.lock.yaml  apm.yml
apm/skills/managing-python-projects-with-uv/.github/agents/assets/: Makefile  README.md  pyproject.toml
notebooks/: 000 - KS - Curated AI Skills - Overview.ipynb  000 - KS - Curated AI Skills - Overview.md
